# mongoose

./: CMakeLists.txt  mongoose.c  mongoose.c.manifest  mongoose.h  mongoose.h.manifest
mongoose/src/: coap.c  coap.h  common.h  dns.c  dns.h  dns_server.c  dns_server.h  http.c  http.h  http_client.h  http_server.h  internal.h  mqtt.c  mqtt.h  mqtt_server.c  mqtt_server.h  multithreading.c  net.c  net.h  net_if.h  net_if_socket.c  resolv.c  resolv.h  uri.c  uri.h  util.c  util.h
tests/: test_http.c  test_http_aio.c  test_ssl.c
